--- a/AtkTennis/Views/Security/ListUsers.cshtml
+++ b/AtkTennis/Views/Security/ListUsers.cshtml
@@ -25,6 +25,7 @@
                     <th scope="col">Kullanıcı Adı</th>
                     <th scope="col">E-Mail</th>
                     <th scope="col">Doğum Tarihi</th>
+                    <th scope="col">Telefon</th>
                     <th scope="col">Detaylar</th>
                     <th scope="col">Güncelle</th>
                     <th scope="col">Sil</th>
@@ -42,6 +43,8 @@
                         <td data-label="Kullanıcı Adı">@item.UserName</td>
                         <td data-label="E-Mail">@item.Email</td>
                         <td data-label="Doğum Tarihi">@item.BirthDate</td>
+                        <td data-label="Telefon">@item.PhoneNumber</td>
+
 
                         <form method="post">
 
