--- a/AtkTennis/Views/Admin/AdminHome.cshtml
+++ b/AtkTennis/Views/Admin/AdminHome.cshtml
@@ -3,6 +3,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
+@model AtkTennis.ViewModels.AdminHomeModel
 
 <div class="content-wrapper">
 
@@ -30,6 +31,20 @@
             <div class="row">
                 <div class="col-lg-3 col-6">
                     <!-- small box -->
+                    <div class="small-box bg-warning">
+                        <div class="inner">
+                            <h3>@Model.TotalUserCount</h3>
+                            <p>Toplam Kullanıcı Sayısı</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-person-add"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-3 col-6">
+                    <!-- small box -->
                     <div class="small-box bg-info">
                         <div class="inner">
                             <h3>150</h3>
@@ -53,21 +68,6 @@
                         </div>
                         <div class="icon">
                             <i class="ion ion-stats-bars"></i>
-                        </div>
-                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                    </div>
-                </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-6">
-                    <!-- small box -->
-                    <div class="small-box bg-warning">
-                        <div class="inner">
-                            <h3>44</h3>
-
-                            <p>User Registrations</p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-person-add"></i>
                         </div>
                         <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
