--- a/AtkTennis/Views/Security/RegisterMember.cshtml
+++ b/AtkTennis/Views/Security/RegisterMember.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-@model Register
+@model AtkTennis.ViewModels.RegisterViewModel
 @*<section class="content">
         <div class="content-wrapper" style="background-color:darkgray">
             <div class="row justify-content-center ">
@@ -75,13 +75,13 @@
                                     <div class="coll-2">
                                         <div class="input--group">
                                             <label class="label">Ad-Soyad</label>
-                                            <input  asp-for="FullName" type="text" id="name" placeholder="Full-Name" class="input--style-4">
+                                            <input  asp-for="Registers.FullName" type="text" id="name" placeholder="Full-Name" class="input--style-4" autocomplete="new-password">
                                         </div>
                                     </div>
                                     <div class="coll-2">
                                         <div class="input--group">
                                             <label class="label">Giriş Yapacağı Kullanıcı Adı</label>
-                                            <input asp-for="UserName" type="text"  id="name" placeholder="UserName" class="input--style-4" >
+                                            <input asp-for="Registers.UserName" type="text"  id="name" placeholder="UserName" class="input--style-4" autocomplete="new-password">
                                         </div>
                                     </div>
                                 </div>
@@ -90,7 +90,7 @@
                                         <div class="input--group">
                                             <label class="label">Birthday</label>
                                             <div class="input--group-icon">
-                                                <input asp-for="BirthDate" type="date" id="birth-date" placeholder="BirthDate (exp: 12.02.1998)" class="input--style-4 js-datepicker" >
+                                                <input asp-for="Registers.BirthDate" type="date" id="birth-date" placeholder="BirthDate (exp: 12.02.1998)" class="input--style-4 js-datepicker" autocomplete="new-password">
                                                 <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
                                             </div>
                                         </div>
@@ -117,13 +117,13 @@
                                     <div class="coll-2">
                                         <div class="input--group">
                                             <label class="label">Email</label>
-                                            <input asp-for="Email" type="email"  id="email" placeholder="Email" class="input--style-4">
+                                            <input asp-for="Registers.Email" type="email"  id="email" placeholder="Email" class="input--style-4" autocomplete="new-password">
                                         </div>
                                     </div>
                                     <div class="coll-2">
                                         <div class="input--group">
                                             <label class="label">Phone Number</label>
-                                            <input class="input--style-4" type="text" id="phone" placeholder="Phone">
+                                            <input asp-for="AppIdentityUsers.PhoneNumber" type="text" class="input--style-4"  id="phone" placeholder="Phone" autocomplete="new-password">
                                         </div>
                                     </div>
                                 </div>
@@ -131,13 +131,13 @@
                                     <div class="coll-2">
                                         <div class="input--group">
                                             <label class="label">Password</label>
-                                            <input asp-for="Password" type="password" id="password" placeholder="Password" class="input--style-4">
+                                            <input asp-for="Registers.Password" type="password" id="password" placeholder="Password" class="input--style-4" autocomplete="new-password">
                                         </div>
                                     </div>
                                     <div class="coll-2">
                                         <div class="input--group">
                                             <label class="label">Confirm Password</label>
-                                            <input asp-for="ConfirmPassword" type="password" id="confirm-password" placeholder="Confirm-Password" class="input--style-4">
+                                            <input asp-for="Registers.ConfirmPassword" type="password" id="confirm-password" placeholder="Confirm-Password" class="input--style-4" autocomplete="new-password">
                                         </div>
                                     </div>
                                 </div>
