--- a/AtkTennis/Views/Security/SignIn.cshtml
+++ b/AtkTennis/Views/Security/SignIn.cshtml
@@ -7,6 +7,8 @@
 
 @model SignIn
 
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,56 +29,56 @@
     <link href="~/login/main.css" rel="stylesheet" />
     <link href="~/login/util.css" rel="stylesheet" />
     <!--===============================================================================================-->
-
+    <link href="~/adminRoot/css/jquery-confirm.css" rel="stylesheet" />
 </head>
 <body>
-   
-            <div class="limiter">
-                <div class="container-login100">
-                    <div class="wrap-login100">
-                        <div class="login100-pic js-tilt" data-tilt>
-                            <img src="~/images/img-02.png" alt="IMG">
-                        </div>
 
-                        <form asp-controller="Security" asp-action="SignIn" method="post" class="login100-form validate-form">
-                            <span class="login100-form-title">
-                                GİRİŞ YAP
-                            </span>
-
-                            <div class="wrap-input100 validate-input">
-                                <input asp-for="UserName" class="input100" type="text" name="Username" placeholder="Username">
-                                <span class="focus-input100"></span>
-                                <span class="symbol-input100">
-                                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                                </span>
-                            </div>
-
-                            <div class="wrap-input100 validate-input" data-validate="Password is required">
-                                <input asp-for="Password" class="input100" type="password" name="Password" placeholder="Password">
-                                <span class="focus-input100"></span>
-                                <span class="symbol-input100">
-                                    <i class="fa fa-lock" aria-hidden="true"></i>
-                                </span>
-                            </div>
-
-                            <div class="container-login100-form-btn">
-                                <button class="login100-form-btn">
-                                    Giriş
-                                </button>
-                            </div>
-
-                            <div class="text-center p-t-12">
-                                <span class="txt1">
-                                    Forgot
-                                </span>
-                                <a class="txt2" href="#">
-                                    Username / Password?
-                                </a>
-                            </div>
-                        </form>
-                    </div>
+    <div class="limiter">
+        <div class="container-login100">
+            <div class="wrap-login100">
+                <div class="login100-pic js-tilt" data-tilt>
+                    <img src="~/images/img-02.png" alt="IMG">
                 </div>
+
+                <form asp-controller="Security" asp-action="SignIn" method="post" class="login100-form validate-form">
+                    <span class="login100-form-title">
+                        GİRİŞ YAP
+                    </span>
+
+                    <div class="wrap-input100 validate-input">
+                        <input asp-for="UserName" class="input100" type="text" name="Username" placeholder="Username">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Password is required">
+                        <input asp-for="Password" class="input100" type="password" name="Password" placeholder="Password">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="fa fa-lock" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <div class="container-login100-form-btn">
+                        <button class="login100-form-btn">
+                            Giriş
+                        </button>
+                    </div>
+
+                    <div class="text-center p-t-12">
+                        <span class="txt1">
+                            Forgot
+                        </span>
+                        <a class="txt2" href="#">
+                            Username / Password?
+                        </a>
+                    </div>
+                </form>
             </div>
+        </div>
+    </div>
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -97,6 +99,27 @@
     </script>
     <!--===============================================================================================-->
     <script src="~/js/main.js"></script>
-
+    <script src="~/lib/jquery/dist/jquery-confirm.js"></script>
 </body>
 </html>
+
+@{ if (Model != null)
+    {
+        if (Model.UserName != null || Model.Password != null)
+        {
+            <script>
+                $.confirm({
+                    title: "Uyarı",
+                    content: "Kullanıcı Adı ve/veye Şifre Hatalı.",
+                    buttons: {
+                        TAMAM: function () {
+
+                        }
+                    }
+                });
+            </script>
+
+        }
+    }
+
+}
