--- a/AtkTennis/Views/Security/Register.cshtml
+++ b/AtkTennis/Views/Security/Register.cshtml
@@ -89,7 +89,7 @@
                                     <div class="coll-2">
                                         <div class="input--group">
                                             <label class="label">Phone Number</label>
-                                            <input asp-for="AppIdentityUsers.PhoneNumber" type="text" class="input--style-4"  id="phone" placeholder="Phone" autocomplete="new-password">
+                                            <input asp-for="AppIdentityUsers.PhoneNumber" type="text" class="input--style-4" id="phone" placeholder="Phone" autocomplete="new-password">
                                         </div>
                                     </div>
                                 </div>
@@ -107,16 +107,15 @@
                                         </div>
                                     </div>
 
-                                   
+
                                 </div>
-                           
+                               
                                 <div class="input--group">
                                     <label class="label">Role</label>
                                     <div class="rs-select2 js-select-simple select--no-search">
-                                        <select name="Role" asp-for="Registers.Role" id="Role">
+                                        <select name="Registers.Role" asp-for="Registers.Role" id="Registers.Role">
                                             <option disabled="disabled" selected="selected">Choose option</option>
 
-                                          
                                             <option>Manager</option>
                                             <option>Trainer</option>
                                             <option>Student</option>
