--- a/AtkTennis/Views/Security/RegisterMember.cshtml
+++ b/AtkTennis/Views/Security/RegisterMember.cshtml
@@ -145,7 +145,7 @@
                                     <label class="label">Subject</label>
                                     <div class="rs-select2 js-select-simple select--no-search">
                                         <select name="subject">
-                                            <option  selected="selected">Choose option</option>
+                                            <option disabled="disabled" selected="selected">Choose option</option>
                                             <option>Subject 1</option>
                                             <option>Subject 2</option>
                                             <option>Subject 3</option>
