--- a/AtkTennis/wwwroot/workSch/style.css
+++ b/AtkTennis/wwwroot/workSch/style.css
@@ -3107,7 +3107,8 @@ mark {
     --cd-color-event-1-h: 199;
     --cd-color-event-1-s: 25%;
     --cd-color-event-1-l: 46%;
-    --cd-color-event-2: hsl(271, 23%, 26%);
+    --cd-color-
+        : hsl(271, 23%, 26%);
     --cd-color-event-2-h: 271;
     --cd-color-event-2-s: 23%;
     --cd-color-event-2-l: 26%;
