--- a/AtkTennis/wwwroot/css/list.css
+++ b/AtkTennis/wwwroot/css/list.css
@@ -14,8 +14,8 @@ table {
     }
 
     table tr {
-        background-color: #f8f8f8;
-        border: 1px solid #ddd;
+        background-color: #f0f0f0;
+        border: 1px solid #000;
         padding: .35em;
     }
 
