--- a/AtkTennis/Views/Shared/_AdminLayout.cshtml
+++ b/AtkTennis/Views/Shared/_AdminLayout.cshtml
@@ -135,16 +135,16 @@
                         <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                @*<li class="nav-item">
                     <a class="nav-link" data-widget="fullscreen" href="#" role="button">
                         <i class="fas fa-expand-arrows-alt"></i>
                     </a>
-                </li>
-                <li class="nav-item">
+                </li>*@
+                @*<li class="nav-item">
                     <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
                         <i class="fas fa-th-large"></i>
                     </a>
-                </li>
+                </li>*@
             </ul>
         </nav>
         <!-- /.navbar -->
@@ -237,10 +237,10 @@
                                 <li class="nav-item">
                                     <a href="~/Security/ListUsers" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Öğrenciler</p>
+                                        <p>Kullanıcı Listeleri</p>
                                     </a>
                                 </li>
-                                <li class="nav-item">
+                                @*<li class="nav-item">
                                     <a href="pages/layout/boxed.html" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Misafir Öğrenci</p>
@@ -264,7 +264,7 @@
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Personel Listesi</p>
                                     </a>
-                                </li>
+                                </li>*@
 
                                 @*<li class="nav-item">
                                         <a href="pages/layout/fixed-sidebar-custom.html" class="nav-link">
@@ -293,7 +293,33 @@
                             </ul>
                         </li>
 
-                        <li class="nav-item">
+                         <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas fa-copy"></i>
+                                <p>
+                                    Rezervasyonlar
+                                    <i class="fas fa-angle-left right"></i>
+                                    @*<span class="badge badge-info right">6</span>*@
+                                </p>
+                            </a>
+
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="~/Admin/ReservationTable" class="nav-link">
+                                        <i class="fas fa-th nav-icon"></i>
+                                        <p>Rezervasyon Tablosu</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="~/Admin/Reservation" class="nav-link">
+                                        <i class="fas fa-th nav-icon"></i>
+                                        <p>Rezervasyon Yap</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        @*<li class="nav-item">
                             <a href="~/Admin/Reservation" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
@@ -301,9 +327,9 @@
                                     <span class="right badge badge-danger">New</span>
                                 </p>
                             </a>
-                        </li>
+                        </li>*@
 
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
@@ -470,8 +496,8 @@
                                     <span class="badge badge-info right">2</span>
                                 </p>
                             </a>
-                        </li>
-                        <li class="nav-item">
+                        </li>*@
+                        @*<li class="nav-item">
                             <a href="pages/gallery.html" class="nav-link">
                                 <i class="nav-icon far fa-image"></i>
                                 <p>
@@ -715,8 +741,8 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>
-                        <li class="nav-item">
+                        </li>*@
+                        @*<li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-search"></i>
                                 <p>
@@ -738,7 +764,8 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>
+                        </li>*@
+
                         <li class="nav-header">MISCELLANEOUS</li>
                         <li class="nav-item">
                             <a href="iframe.html" class="nav-link">
